# cpp-pack-template

./: .gitignore  CMakeLists.txt  Cargo.toml  main.cpp
src/: lib.rs  main.rs
