[package]
name = "{{project-name}}"
version = "0.1.0"
edition = "2021"
authors = ["{{authors}}"]

[lib]
name = "{{crate_name}}_rs"
crate-type = ["staticlib","rlib"]
path = "src/lib.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.release]
lto = "fat"
codegen-units = 1
panic = 'abort'